--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -54,9 +54,10 @@ box-sizing: border-box;
 }
 /*Footer en comun*/
 .Informacion{
-    width: 70px;
+    width: 100%;
     height: 70px;
-    display: inline;   
+    display: inline;
+      
 }
 .Insta{
     width: 50px;
@@ -175,6 +176,10 @@ footer{
     grid-area: footer;
 }
 .Formulario{
+    color: white;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-top: 120px
+
 }
