--- a/estilos/main.css
+++ b/estilos/main.css
@@ -33,8 +33,8 @@ header {
   grid-area: header; }
 
 .Informacion {
-  width: 100%;
-  height: 70px;
+  height: 100%;
+  width: 70px;
   display: inline; }
 
 .Insta {
