--- a/sass/Partials/_Header.scss
+++ b/sass/Partials/_Header.scss
@@ -1,9 +1,14 @@
 /*Header en comun*/
+$tittlemap: ( 
+    color: whitesmoke,
+    centrado: center,
+    tamañoF: 50px,
+);
 .Titulo{
-    text-align: center;
-    color:whitesmoke;
+    text-align: map-get($tittlemap, centrado);
+    color: map-get($tittlemap, color );
     font-family: 'Times New Roman', Times, serif;
-    font-size: 50px;
+    font-size: map-get($tittlemap, tamañoF);
 }
 /*Menu en comun*/
 .Menu{
@@ -22,7 +27,6 @@
   padding: 0 4px;
   text-decoration: none;
 }
-
 header{
     background: rgb(222,184,135);
     background: linear-gradient(0deg, rgba(222,184,135,1) 11%, rgba(172,142,105,1) 52%, rgba(111,92,68,1) 74%, rgba(46,38,28,1) 88%, rgba(0,0,0,1) 100%);
