--- a/sass/Partials/_Footer.scss
+++ b/sass/Partials/_Footer.scss
@@ -3,22 +3,12 @@
     width: $width;
     
 }
-.Informacion{
-    @include sizes(70px, 100%);
-    display: inline;
-      
-}
-.Insta{
-    width: 50px;
-    height: 75px;
-    padding-top: 25px;
-}
-.Facebook{
-    width: 50px;
-    height: 70px;
-    align-items: 403px ;
-    padding-top: 25px;
-}
-footer{
-    grid-area: footer;
+.footerMenu{
+    text-align: center;
+    color: white;
+    padding: 10px;
+    a{
+        color: white;
+        text-decoration: none;
+    }
 }
