--- a/sass/Partials/_Media-queries.scss
+++ b/sass/Partials/_Media-queries.scss
@@ -7,5 +7,7 @@
         grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas: "Frase" "Horario" "MenuComida";
     }
-    
+    .Text__1{
+        font-size: 12px;
+    }
 }
